<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FAMILY PORTAL</string>
    <string name="welcome">Welcome to chad\'s family portal.</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_info">User Information</string>
	<string name="add_item">ADD</string>
	<string name="edit_item">EDIT</string>
	<string name="delete_item">DELETE</string>
	<string name="view_item">VIEW</string>
	<string name="sync_item">SYNC</string>
	<string name="userinfo">USER INFORMATION</string>
	<string name="bank_card_info">BANK CARD INFORMATION</string>
	<string name="add_userinfo">ADD USER INFORMATION</string>
	<string name="edit_userinfo">EDIT USER INFORMATION</string>
	<string name="add_bank_card">ADD BANK CARD</string>
	<string name="edit_bank_card">EDIT BANK CARD</string>
	<string name="view_bank_card">VIEW BANK CARD</string>
	<string name="daily_consume_info">DAILY CONSUME INFORMATION</string>
	<string name="add_daily_consume">ADD DAILY CONSUME</string>
	<string name="edit_daily_consume">EDIT DAILY CONSUME</string>
	<string name="view_daily_consume">VIEW DAILY CONSUME</string>
	<string name="login">LOGIN</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="account">account</string>
	<string name="user_name">user name</string>
	<string name="password">password</string>
	<string name="card_no">card no.</string>
	<string name="card_bank">bank</string>
	<string name="card_city">city</string>
	<string name="card_user">user</string>
	<string name="consume_type">type</string>
	<string name="consume_amount">amount(￥)</string>
	<string name="consume_description">description</string>
	<string name="daily_consume_amount">amount(￥)</string>
	<string name="zero">0</string>
	<string name="daily_consume_date">date</string>
	<string name="warm_prompt">Warm prompt</string>
	<string name="account_required">Account is required</string>
	<string name="username_required">Username is required</string>
	<string name="password_required">Password is required</string>
	<string name="search_keyword">Please input search keyword.</string>
	<string name="card_no_required">Card no is required.</string>
	<string name="amount_required">Amount is required.</string>
	<string name="description_required">Description is required</string>
	<string name="add_unsuccessfully">Failed to add.</string>
	<string name="update_unsuccessfully">Failed to update.</string>
	<string name="delete_unsuccessfully">Failed to delete.</string>
	<string name="sync_successfully">Sync daily consume successfully.</string>
	<string name="sync_nodata">There is no data available.</string>
	<string name="sync_unsuccessfully">Failed to sync.</string>
	<string name="login_unsuccessfully">Login was unsuccessful. Please correct the errors and try again.</string>
	<string name="account_has_been_used">Account has been used. Please select another. </string>
	<string name="login_as_administrator">You have no authority. Please login as administrator.</string>
	<string name="login_as_normal_user">You have no authority. Please login as normal user.</string>
	<string name="confirm_to_delete_userinfo">Confirm to delete user info?</string>
	<string name="confirm_to_delete_bankcard">Confirm to delete bank card?</string>
	<string name="confirm_to_delete_consume">Confirm to delete \'%1$s\'?</string>
	<string name="confirm_to_delete_dailyconsume">Confirm to delete daily consume?</string>
	<string name="module_build">This module is being build.</string>
	<string name="unsave_changes">Unsaved changes will be lost.</string>
	<string name="leave_login">Do you want to leave login page?</string>
	<string name="clear">clear</string>
	<string name="bank_ico">bank ico</string>
	<string name="abc">Agricultural Bank of China</string>
	<string name="bank_of_china">Bank of China</string>
	<string name="bank_of_communications">Bank of Communications</string>
	<string name="bank_of_jiangsu">Bank of JiangSu</string>
	<string name="china_citic_bank">China Citic Bank</string>
	<string name="china_construction_bank">China Construction Bank</string>
	<string name="china_nerchants_bank">China Merchants Bank</string>
	<string name="icbc">Industrial and Commercial Bank of China</string>
	<string name="other_banks">Other Banks</string>
	<string name="all_types_are_used">All consume types are used.</string>
	<string name="daily_consume_exsit">There is existed daily consume on this day.</string>
</resources>