<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TitleStyle"
        android:text="@string/userinfo" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:paddingLeft="5dp"
		android:paddingRight="5dp">
        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" >
            <requestFocus />
        </EditText>        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:textSize="20sp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/gray"
            android:text="@string/account" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/gray"
            android:text="@string/user_name" />
    </LinearLayout>
    <View 
	    android:layout_height="1dp"
	    android:layout_width="fill_parent"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="@color/gray"/>
    <ListView
        android:id="@+id/userInfoListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >
    </ListView>
	
</LinearLayout>